--- a/ec_rent.html
+++ b/ec_rent.html
@@ -18,7 +18,8 @@
             <ul>
               <li class="logo"><a href="#inicio"><img src="img/logo-battery-white.svg" alt=""></a></li>
               <li><a href="#cargador">¿Quienes somos?</a></li>
-              <li><a href="alianza.html">Alianza</a></li>
+              <li><a href="ec_show.html">EC-SHOW</a></li>
+              <li><a href="ec_rent.html">EC-RENT</a></li>
               <li><a href="anunciate.html">Anunciate</a></li>
               <li><a href="#mapa">Encontranos</a></li>
               <li><a href="#contacto">Contactanos</a></li>
@@ -47,9 +48,11 @@
               <div class="text_center_slider ">
                 <div class="txt">                  
                   <h1>
-                    <span>Alianza</span>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae error nulla recusandae placeat illo voluptas perspiciatis magnam natus, doloremque, veniam.
+                    <span>EASY CHARGE RENT</span>
                   </h1>
+                  <div class="cont_btn">
+                    <a href="#" class="btn">Conoce más</a>
+                  </div>
                 </div>
                 <div class="img">
                   <img src="img/product.png" class="img-responsive" alt="">
@@ -58,9 +61,72 @@
             </div>
           </div>
           <img src="img/slider/slide_1.jpg" alt="" class="img-responsive img_slider">
+          <a href="#" class="arrow_down">
+            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" width="465.7" height="88.2" viewBox="187.6 170.3 465.7 88.2" enable-background="new 187.638 170.269 465.706 88.202" xml:space="preserve"><polyline fill="none" stroke="#02B4B6" stroke-width="8.5" stroke-miterlimit="10" points="652 174.3 420.5 254 189 174.3 "/></svg>
+          </a>
         </div>
       </section>
-<!-- 
+
+      <section>
+        <div class="container">
+          <div class="col-md-12">
+            <div class="quote_text">
+              <h2>Easy Charge Rent</h2>
+              Consiste en otorgar al establecimiento en modalidad de arrendamiento la cantidad de equipo que se considere necesario, exibiendo en los mismo lo que el negocio desee: menú, ofertas y públicidades.
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="cargador">
+        <div class="container">
+          <div class="col-md-12">
+            <div class="flex_container_description">
+              <div class="flex_item">
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/tech/phones_x8.svg" alt="">
+                  <figcaption>
+                    <h2>XX</h2>
+                    <p>Diferenciarse de la competencia es lo que permite sobresalir a los establecimientos. Easy Charge llegó para ayudar a ello.</p>
+                  </figcaption>
+                </figure>
+              </div>
+
+              <div class="flex_item">
+                <figure class="tech_item" id="batery">
+                  <img src="img/icon/tech/battery.svg" alt="">
+                  <figcaption>
+                    <h2>XX</h2>
+                    <p>Las personas cada vez están más preocupadas de no quedarse sin batería, todos quieren conectarse a las redes sociales, buscar información y compartir fotos.</p>
+                  </figcaption>
+                </figure>
+              </div>
+              <div class="flex_item">
+                <figure class="tech_item" id="batery">
+                  <img src="img/icon/tech/battery.svg" alt="">
+                  <figcaption>
+                    <h2>XX</h2>
+                    <p>Tu puedes brindar solución a este problema para la alegría de tus clientes con la ayuda de Easy Charge, brindando un servicio único en el mercado.</p>
+                  </figcaption>
+                </figure>
+              </div>
+
+              <div class="flex_item">
+                <figure class="tech_item" id="size">
+                  <img src="img/icon/tech/size.svg" alt="">
+                  <figcaption>
+                    <h2>XX</h2>
+                    <p>Además de ofrecer la practicidad de un cargador portátil de celulares puedes usar Easy Charge para exhibir a tus clientes menús, promociones, ofertas o hasta publicidades que aumenten tu facturación.</p>
+                  </figcaption>
+                </figure>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </section>
+
+
       <section id="easycharge">
         <div class="container">
           <div class="flex_content_doble easycharge">
@@ -70,57 +136,14 @@
               </div>
             </div>
             <div class="left">
-              <h2>¿Qué es EasyCharge?</h2>
-              <p>Easy Charge es un producto moderno de alta gama, percibido como un gadget para smartphones y muy útil para personas que no se desconectan del mundo tecnológico.</p>
-            </div>
-          </div>
-          <div class="flex_content_doble publicidad">
-            <div class="right">
-              <h2>¿Que ofrecemos?</h2>
-              <p>Easy Charge es un producto moderno de alta gama, percibido como un gadget para smartphones y muy útil para personas que no se desconectan del mundo tecnológico.</p>
-            </div>
-            <div class="left">
-              <img src="img/icon/publicity.svg" alt="">
+              <h2>Para más información</h2>
+              <div class="cont_btn">
+                <a href="#" class="btn">Contactanos</a>
+              </div>
             </div>
           </div>
         </div>
       </section>
-
-
-
-
-      <section id="cargador">
-        <div class="container">
-          <div class="col-md-12">
-            <div class="text-center">
-              <h2>Alianzas</h2>
-            </div>
-            <div class="flex_container_description">
-
-              <div class="flex_item">
-                <figure class="tech_item" id="eight_gagdet">
-                  <img src="img/icon/tech/phones_x8.svg" alt="">
-                  <figcaption>
-                    <h2>Temaki</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, dolorum?</p>
-                  </figcaption>
-                </figure>
-              </div>
-
-              <div class="flex_item">
-                <figure class="tech_item" id="eight_gagdet">
-                  <img src="img/icon/tech/phones_x8.svg" alt="">
-                  <figcaption>
-                    <h2>Temaki</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, dolorum?</p>
-                  </figcaption>
-                </figure>
-              </div>
-
-            </div>
-          </div>
-        </div>
-      </section> -->
 
       <footer id="contacto">
         <div class="slider  separator_top ">
