--- a/ec_show.html
+++ b/ec_show.html
@@ -41,82 +41,79 @@
         </div>
       </div>
 
-
       <section id="inicio">
         <div class="slider separator_bottom gradiant">
           <div class="flex_center">
             <div class="flex_item">
               <div class="text_center_slider ">
-                <div class="img">
-                  <img src="img/product_anunciate.png" class="img-responsive" alt="">
-                </div>
                 <div class="txt">                  
                   <h1>
-                    <span>Anúnciate con nosotros</span>
+                    <span>EASY CHARGE SHOW</span>
                   </h1>
                   <div class="cont_btn">
                     <a href="#" class="btn">Conoce más</a>
                   </div>
                 </div>
+                <div class="img">
+                  <img src="img/product.png" class="img-responsive" alt="">
+                </div>
               </div>
             </div>
           </div>
-          <img src="img/slider/slide_4.jpg" alt="" class="img-responsive img_slider">
-          <a href="#" class="arrow_down">
-            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" width="465.7" height="88.2" viewBox="187.6 170.3 465.7 88.2" enable-background="new 187.638 170.269 465.706 88.202" xml:space="preserve"><polyline fill="none" stroke="#02B4B6" stroke-width="8.5" stroke-miterlimit="10" points="652 174.3 420.5 254 189 174.3 "/></svg>
-          </a>
+          <img src="img/slider/slide_1.jpg" alt="" class="img-responsive img_slider">
         </div>
       </section>
 
       <section>
         <div class="container">
           <div class="col-md-12">
-            <p class="quote_text">
-              Easy Charge es un dispositivo moderno y práctico donde publicitar tu marca.
-              <br>
-              <br>
-              Anunciar en Easy Charge es colocar tu marca en una experiencia memorable y llamativa para el público.
-            </p>
+            <div class="quote_text">
+              <h2>Easy Charge Show</h2>
+              Consiste en un servicio novedoso para el mercado uruguayo sin costo para los establecimientos, en el que se soluciona la problemática que tanto nos afecta hoy en día que es quedarnos sin batería en nuestros teléfonos celulares y dispositivos móviles.
+            </div>
           </div>
         </div>
       </section>
 
-      <section id="anunciate">
+      <section id="cargador">
         <div class="container">
           <div class="col-md-12">
+            <div class="text-center">
+              <h2>¿Por qué tener Easy Charge en tu establecimiento?</h2>
+            </div>
             <div class="flex_container_description">
+
               <div class="flex_item">
                 <figure class="tech_item" id="eight_gagdet">
-                  <!-- <img src="img/icon/tech/phones_x8.svg" alt=""> -->
+                  <img src="img/icon/tech/phones_x8.svg" alt="">
                   <figcaption>
-                    <h2>Última tecnologia</h2>
-                    <p>EasyCharge es una plataforma Simple y Eficaz.</p>
+                    <h2>Temaki</h2>
+                    <p>Satisface la necesidad de los clientes de que sus teléfonos celulares y dispositivos móviles se mantengan con carga.</p>
                   </figcaption>
                 </figure>
               </div>
 
               <div class="flex_item">
-                <figure class="tech_item" id="batery">
-                  <!-- <img src="img/icon/tech/battery.svg" alt=""> -->
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/tech/phones_x8.svg" alt="">
                   <figcaption>
-                    <h2>Única</h2>
-                    <p>Es colocar su Marca en una experencia memorable y divertida.</p>
+                    <h2>Temaki</h2>
+                    <p>Significa un valor agregado para tu negocio, diferenciándolo de la competencia y atrayendo clientela a tu establecimiento.</p>
+                  </figcaption>
+                </figure>
+              </div>
+              
+              <div class="flex_item">
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/tech/phones_x8.svg" alt="">
+                  <figcaption>
+                    <h2>Temaki</h2>
+                    <p>Es una vía de comunicación para exhibir todo tipo de contenidos.</p>
                   </figcaption>
                 </figure>
               </div>
 
-              <div class="flex_item">
-                <figure class="tech_item" id="size">
-                  <!-- <img src="img/icon/tech/size.svg" alt=""> -->
-                  <figcaption>
-                    <h2>Anunciate</h2>
-                    <p>Anuncia en EasyCharge es fácil y rápido.</p>
-                  </figcaption>
-                </figure>
-              </div>
             </div>
-            <p class="quote_text">¿Como funciona?, Anunciar en EasyCharge es sencillo y rápido, solo tienes que llenar el formulario y le responderemos a la brevedad. </p>
-
           </div>
         </div>
       </section>
@@ -131,10 +128,8 @@
               </div>
             </div>
             <div class="left">
-              <h2>Anuncia con nosotros</h2>
-              <div class="cont_btn">
-                <a href="#" class="btn">Contactanos</a>
-              </div>
+              <h2>¿Queres formar parte de nuestra alianza?</h2>
+              <p>Si tenes un restaurante, bar, centro de estética, gimnasio o establecimiento en donde tus clientes necesiten cargar sus celulares y dispositivos moviles contáctanos y disfruta de la experiencia única de Easy Charge.</p>
             </div>
           </div>
         </div>
