--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
             <ul>
               <li class="logo"><a href="#inicio"><img src="img/logo-battery-white.svg" alt=""></a></li>
               <li><a href="#cargador">¿Quienes somos?</a></li>
-              <li><a href="alianza.html">Alianza</a></li>
+              <li><a href="ec_show.html">EC-SHOW</a></li>
+              <li><a href="ec_rent.html">EC-RENT</a></li>
               <li><a href="anunciate.html">Anunciate</a></li>
               <li><a href="#mapa">Encontranos</a></li>
               <li><a href="#contacto">Contactanos</a></li>
@@ -47,11 +48,11 @@
               <div class="text_center_slider ">
                 <div class="txt">                  
                   <h1>
-                    <span>Somos EasyCharge</span>
-                    No te preocupes, Quedarte sin baterías es cosa del pasado
+                    <span>Somos Easy Charge.</span>
+                    No te preocupes, quedarte sin batería es cosa del pasado.
                   </h1>
                   <div class="cont_btn">
-                    <a href="#" class="btn">Contáctanos</a>
+                    <a href="#" class="btn">Conoce más</a>
                   </div>
                 </div>
                 <div class="img">
@@ -77,13 +78,16 @@
             </div>
             <div class="left">
               <h2>¿Qué es EasyCharge?</h2>
-              <p>Easy Charge es un producto moderno de alta gama, percibido como un gadget para smartphones y muy útil para personas que no se desconectan del mundo tecnológico.</p>
+              <p>Imaginate estar disfrutando una linda reunión entre amigos y en el momento de sacarse una fotografía para retratar el momento te quedas sin batería en el celular.</p>
+              <p>Piensa estar tomando un café mientras esperas esa importante llamada de negocios y que tu teléfono se quede sin carga.</p>
+              <p>¿A quíen no le ha pasado estas situaciones?, para que no vuelvan a suceder llegó a Uruguay Easy Charge!!!.</p>
+              <p>Easy Charge es un dispositivo portátil que permite cargar la batería de hasta 8 smartphones a la vez, además de contar con una pantalla LED integrada que funciona como un vehículo de comunicación.</p>
             </div>
           </div>
           <div class="flex_content_doble publicidad">
             <div class="right">
               <h2>¿Que ofrecemos?</h2>
-              <p>Easy Charge es un producto moderno de alta gama, percibido como un gadget para smartphones y muy útil para personas que no se desconectan del mundo tecnológico.</p>
+              <p>Easy Charge brinda un servicio gratuito de carga para smartphones y dispositivos móviles, de una manera rápida, cómoda y segura.</p>
             </div>
             <div class="left">
               <img src="img/icon/publicity.svg" alt="">
@@ -96,7 +100,7 @@
         <div class="container">
           <div class="col-md-12">
             <div class="text-center">
-              <h2>Caracteristicas técnicas</h2>
+              <h2>Caracteristicas de Easy Charge</h2>
             </div>
             <div class="flex_container_description">
               <div class="flex_item">
@@ -157,43 +161,6 @@
           </div>
         </div>
       </section>
-
-      <section>
-        <div class="slider separator_bottom separator_top ">
-          <div class="gradiant">
-            <img src="img/slider/slide_2.jpg" alt="" class="img-responsive img_slider">
-          </div>
-          <div class="flex_center">
-            <div class="flex_item">
-              <div class="text_center_slider ">
-                <div class="img">
-                  <img src="img/iphone_charging.png" class="img-responsive" alt="">
-                </div>
-                <div class="txt">                  
-                  <h1>
-                    Encuentra nuestros puntos de carga 
-                    <br>
-                    EasyCharge
-                  </h1>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section id="mapa">
-        <div class="container">
-          <div class="col-md-12">
-            <div class="cont_map">
-              <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13085.099296879598!2d-56.16772330784963!3d-34.92464388604025!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f819e0be26dff%3A0x5721a12a2943bc00!2sPunta+Carretas%2C+Montevideo!5e0!3m2!1ses-419!2suy!4v1495585762275" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
 
       <footer id="contacto">
         <div class="slider  separator_top ">
