--- a/content_save.html
+++ b/content_save.html
@@ -80,3 +80,18 @@ Listado
           </div>
         </div>
       </section>
+
+
+      
+      <div class="bottom_links">
+        <div class="ubicanos">
+          <a href="#mapa">
+            <img src="img/icon/map.svg" alt="Encuentranos">
+          </a>
+        </div>
+        <div class="contacto">
+          <a href="#contacto">
+            <img src="img/icon/contact.svg" alt="Contacto">
+          </a>
+        </div>
+      </div>
