--- a/ec_show.html
+++ b/ec_show.html
@@ -28,19 +28,6 @@
         </div>
       </header>
 
-      <div class="bottom_links">
-        <div class="ubicanos">
-          <a href="#mapa">
-            <img src="img/icon/map.svg" alt="Encuentranos">
-          </a>
-        </div>
-        <div class="contacto">
-          <a href="#contacto">
-            <img src="img/icon/contact.svg" alt="Contacto">
-          </a>
-        </div>
-      </div>
-
       <section id="inicio">
         <div class="slider separator_bottom gradiant">
           <div class="flex_center">
@@ -55,12 +42,15 @@
                   </div>
                 </div>
                 <div class="img">
-                  <img src="img/product.png" class="img-responsive" alt="">
+                  <img src="img/product_2.png" class="img-responsive" alt="">
                 </div>
               </div>
             </div>
           </div>
           <img src="img/slider/slide_1.jpg" alt="" class="img-responsive img_slider">
+          <a href="#" class="arrow_down">
+            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" width="465.7" height="88.2" viewBox="187.6 170.3 465.7 88.2" enable-background="new 187.638 170.269 465.706 88.202" xml:space="preserve"><polyline fill="none" stroke="#02B4B6" stroke-width="8.5" stroke-miterlimit="10" points="652 174.3 420.5 254 189 174.3 "/></svg>
+          </a>
         </div>
       </section>
 
