--- a/index.html
+++ b/index.html
@@ -28,19 +28,6 @@
         </div>
       </header>
 
-      <div class="bottom_links">
-        <div class="ubicanos">
-          <a href="#mapa">
-            <img src="img/icon/map.svg" alt="Encuentranos">
-          </a>
-        </div>
-        <div class="contacto">
-          <a href="#contacto">
-            <img src="img/icon/contact.svg" alt="Contacto">
-          </a>
-        </div>
-      </div>
-
       <section id="inicio">
         <div class="slider separator_bottom gradiant">
           <div class="flex_center">
@@ -156,8 +143,40 @@
                   </figcaption>
                 </figure>
               </div>
-
             </div>
+
+            <div class="gallery">
+              <div class="text-center">
+                <h2>Galería</h2>
+              </div>
+              <div class="flex_container_description">
+                <div class="flex_item">
+                  <figure><img src="img/gallery/photo_1.jpg" class="img-responsive" alt=""></figure>
+                </div>
+                <div class="flex_item">
+                  <figure><img src="img/gallery/photo_1.jpg" class="img-responsive" alt=""></figure>
+                </div>
+                <div class="flex_item">
+                  <figure><img src="img/gallery/photo_1.jpg" class="img-responsive" alt=""></figure>
+                </div>
+                <div class="flex_item">
+                  <figure><img src="img/gallery/photo_1.jpg" class="img-responsive" alt=""></figure>
+                </div>
+                <div class="flex_item">
+                  <figure><img src="img/gallery/photo_1.jpg" class="img-responsive" alt=""></figure>
+                </div>
+                <div class="flex_item">
+                  <figure><img src="img/gallery/photo_1.jpg" class="img-responsive" alt=""></figure>
+                </div>
+                <div class="flex_item">
+                  <figure><img src="img/gallery/photo_1.jpg" class="img-responsive" alt=""></figure>
+                </div>
+                <div class="flex_item">
+                  <figure><img src="img/gallery/photo_1.jpg" class="img-responsive" alt=""></figure>
+                </div>
+              </div>
+            </div>
+
           </div>
         </div>
       </section>
