--- a/ec_rent.html
+++ b/ec_rent.html
@@ -70,40 +70,32 @@
           <div class="col-md-12">
             <div class="flex_container_description">
               <div class="flex_item">
-                <figure class="tech_item" id="eight_gagdet">
-                  <img src="img/icon/tech/phones_x8.svg" alt="">
+                <figure class="tech_item">
                   <figcaption>
-                    <h2>XX</h2>
                     <p>Diferenciarse de la competencia es lo que permite sobresalir a los establecimientos. Easy Charge llegó para ayudar a ello.</p>
+                  </figcaption>
+                </figure>
+              </div>
+              
+              <div class="flex_item">
+                <figure class="tech_item">
+                  <figcaption>
+                    <p>Además de ofrecer la practicidad de un cargador portátil de celulares puedes usar Easy Charge para exhibir a tus clientes menús, promociones, ofertas o hasta publicidades que aumenten tu facturación.</p>
                   </figcaption>
                 </figure>
               </div>
 
               <div class="flex_item">
-                <figure class="tech_item" id="batery">
-                  <img src="img/icon/tech/battery.svg" alt="">
+                <figure class="tech_item">
                   <figcaption>
-                    <h2>XX</h2>
                     <p>Las personas cada vez están más preocupadas de no quedarse sin batería, todos quieren conectarse a las redes sociales, buscar información y compartir fotos.</p>
                   </figcaption>
                 </figure>
               </div>
               <div class="flex_item">
-                <figure class="tech_item" id="batery">
-                  <img src="img/icon/tech/battery.svg" alt="">
+                <figure class="tech_item">
                   <figcaption>
-                    <h2>XX</h2>
                     <p>Tu puedes brindar solución a este problema para la alegría de tus clientes con la ayuda de Easy Charge, brindando un servicio único en el mercado.</p>
-                  </figcaption>
-                </figure>
-              </div>
-
-              <div class="flex_item">
-                <figure class="tech_item" id="size">
-                  <img src="img/icon/tech/size.svg" alt="">
-                  <figcaption>
-                    <h2>XX</h2>
-                    <p>Además de ofrecer la practicidad de un cargador portátil de celulares puedes usar Easy Charge para exhibir a tus clientes menús, promociones, ofertas o hasta publicidades que aumenten tu facturación.</p>
                   </figcaption>
                 </figure>
               </div>
