--- a/ec_show.html
+++ b/ec_show.html
@@ -75,9 +75,7 @@
 
               <div class="flex_item">
                 <figure class="tech_item" id="eight_gagdet">
-                  <img src="img/icon/tech/phones_x8.svg" alt="">
                   <figcaption>
-                    <h2>Temaki</h2>
                     <p>Satisface la necesidad de los clientes de que sus teléfonos celulares y dispositivos móviles se mantengan con carga.</p>
                   </figcaption>
                 </figure>
@@ -85,9 +83,7 @@
 
               <div class="flex_item">
                 <figure class="tech_item" id="eight_gagdet">
-                  <img src="img/icon/tech/phones_x8.svg" alt="">
                   <figcaption>
-                    <h2>Temaki</h2>
                     <p>Significa un valor agregado para tu negocio, diferenciándolo de la competencia y atrayendo clientela a tu establecimiento.</p>
                   </figcaption>
                 </figure>
@@ -95,10 +91,58 @@
               
               <div class="flex_item">
                 <figure class="tech_item" id="eight_gagdet">
-                  <img src="img/icon/tech/phones_x8.svg" alt="">
                   <figcaption>
-                    <h2>Temaki</h2>
                     <p>Es una vía de comunicación para exhibir todo tipo de contenidos.</p>
+                  </figcaption>
+                </figure>
+              </div>
+
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="col-md-12">
+            <div class="text-center">
+              <h2>Estos establecimientos confían en nosotros:</h2>
+            </div>
+            <div class="flex_container_description">
+
+              <div class="flex_item">
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/logo/lisa_burges.jpg" alt="">
+                  <figcaption>
+                    <h2>Lisa Burges & Drinks</h2>
+                    <p>Rambla Pte. Wilson esquina Sarmiento</p>
+                  </figcaption>
+                </figure>
+              </div>
+
+              <div class="flex_item">
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/logo/mirando_mundo.jpg" alt="">
+                  <figcaption>
+                    <h2>Mirando Mundos</h2>
+                    <p>Peatonal Sarandi 326</p>
+                  </figcaption>
+                </figure>
+              </div>
+              
+              <div class="flex_item">
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/logo/temaki.jpg" alt="">
+                  <figcaption>
+                    <h2>Temaki - Sushi house</h2>
+                    <p>21 de Setiembre 2951</p>
+                  </figcaption>
+                </figure>
+              </div>
+
+              <div class="flex_item">
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/logo/anna_cafe.jpg" alt="">
+                  <figcaption>
+                    <h2>Anna Café</h2>
+                    <p>Guipúzcoa 447</p>
                   </figcaption>
                 </figure>
               </div>
